--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -7,9 +7,12 @@ body {
     }
     
 a {
-    @apply text-[20px] hover:text-accent transition-all duration-300;
+    @apply text-[20px] transition-all duration-300;
 }
     
 .h1{
     @apply text-[64px] lg:text-[84px] leading-none;
 }
+
+
+
